# OpenLLM

./: .bazelrc  .cbfmt.toml  .editorconfig  .envrc.template  .eslintignore  .eslintrc.cjs  .git-blame-ignore-revs  .gitattributes  .gitignore  .neoconf.json  .npmrc  .pre-commit-config.yaml  .prettierignore  .prettierrc  .python-version  .ruff.toml  .style.yapf  .yapfignore  ADDING_NEW_MODEL.md  BUILD.bazel  CHANGELOG.md  CITATION.cff  Cargo.toml  DEVELOPMENT.md  Dockerfile  LICENSE  LICENSE.md  Makefile  README.md  README.md.tpl  SECURITY.md  STYLE.md  TODO.md  WORKSPACE  all.sh  bench.py  clean.sh  compile.sh  compose-dev.yaml  cz.py  (+24 more)
.github/: CODEOWNERS  (+5 more)
openllm-client/: .gitignore  .python-version-default  Cargo.toml  DESIGN.md  LICENSE.txt  README.md  build.rs  dev.Dockerfile  generate-grpc-stubs  pyproject.toml
openllm-client/protos/: service.proto
openllm-client/protos/bentoml/grpc/v1/: service.proto
openllm-client/src/: lib.rs
openllm-client/src/bentoclient/: grpc.rs  http.rs  lib.rs
openllm-client/src/openllm_client/: __init__.py  __init__.pyi  _base.py  _http.py  _schemas.py  _shim.py  _stream.py  _typing_compat.py  _utils.py  _utils.pyi  client.py
openllm-client/src/openllm_client/benmin/: __init__.py  _grpc.py  _http.py
openllm-client/src/openllm_client/benmin/descriptors/: __init__.py
openllm-client/src/openllm_client/min/: __init__.py  _grpc.py  _http.py
openllm-client/src/openllm_client/min/descriptors/: __init__.py
openllm-client/src/openllm_client/pb/: __init__.py
openllm-client/src/openllm_client/pb/v1/: service_pb2.py  service_pb2_grpc.pyi
openllm-core/: .git_archival.txt  README.md  pyproject.toml
openllm-core/src/openllm_core/: __init__.py  _configuration.py  _conversation.py  _prompt.py  _schema.py  _schemas.py  _strategies.py  _typing_compat.py  exceptions.py
openllm-core/src/openllm_core/config/: __init__.py  configuration_auto.py  configuration_baichuan.py  configuration_chatglm.py  configuration_commandr.py  configuration_dbrx.py  configuration_dolly_v2.py  configuration_falcon.py  configuration_flan_t5.py  configuration_gemma.py  configuration_gpt_neox.py  configuration_jais.py  configuration_llama.py  configuration_mistral.py  configuration_mixtral.py  configuration_mpt.py  configuration_opt.py  configuration_phi.py  configuration_qwen.py  configuration_stablelm.py  configuration_starcoder.py  configuration_yi.py
openllm-core/src/openllm_core/prompt/: prompt_template.py  utils.py
openllm-core/src/openllm_core/prompts/: __init__.py  _prompt.py  prompt_template.py  utils.py
openllm-core/src/openllm_core/protocol/: __init__.py  hf.py  openai.py
openllm-core/src/openllm_core/utils/: __init__.py  __init__.pyi  _constants.py  analytics.py  codegen.py  dantic.py  import_utils.py  import_utils.pyi  lazy.py  peft.py  pkg.py  representation.py  serde.py
openllm-python/: ADDING_NEW_MODEL.md  CHANGELOG.md  LICENSE.md  README.md  pyoxidizer.bzl  pyproject.toml  setup.py
openllm-python/src/: _service_vars.pyi
openllm-python/src/_openllm_tiny/: Dockerfile.j2  __init__.py  __init__.pyi  _entrypoint.py  _helpers.py  _llm.py  _serialisation.py  _service.py  _service_vars.py  _termui.py  bentofile.yaml  cli.py  service.md  setup.sh
openllm-python/src/openllm/: __init__.py  __init__.pyi  __main__.py  _assign.py  _configuration.py  _conversation.py  _deprecated.py  _embeddings.py  _gen.py  _generation.py  _generation.pyi  _llm.py  _llm.pyi  _prompt.py  _quantisation.py  _quantisation.pyi  _runners.py  _runners.pyi  _schema.py  _service.py  _service_vars.py  _service_vars.pyi  _service_vars_pkg.py  _services.py  _strategies.py  _strategies.pyi  _typing_compat.py  client.py  client.pyi  conversation.py  exceptions.py  openllm-cli  openllm-client  openllm-core  prompts.py  testing.py  utils.py  utils.pyi
openllm-python/src/openllm/bundle/: __init__.py  __init__.pyi  _package.py  _package.pyi
openllm-python/src/openllm/bundle/oci/: Dockerfile  __init__.py
openllm-python/src/openllm/cli/: __init__.py  _factory.py  _sdk.py  entrypoint.py  termui.py
openllm-python/src/openllm/cli/extension/: __init__.py  build_base_container.py  dive_bentos.py  get_containerfile.py  get_prompt.py  list_bentos.py  list_models.py  playground.py
openllm-python/src/openllm/client/: __init__.py
openllm-python/src/openllm/client/runtimes/: __init__.py  base.py  http.py
openllm-python/src/openllm/conversion/: __init__.py
openllm-python/src/openllm/entrypoints/: __init__.py  __init__.pyi  _openapi.py  _openapi.pyi  cohere.py  cohere.pyi  hf.py  hf.pyi  openai.py  openai.pyi
openllm-python/src/openllm/models/: __init__.py
openllm-python/src/openllm/playground/: _meta.yml  falcon_tuned.py  features.py  llama2_qlora.py  opt_tuned.py
openllm-python/src/openllm/protocol/: __init__.py  cohere.py  hf.py  openai.py
openllm-python/src/openllm/serialisation/: __init__.py  __init__.pyi  _helpers.py  _helpers.pyi  constants.py  ggml.py
openllm-python/src/openllm/utils/: __init__.py  __init__.pyi  codegen.py  dantic.py  dummy_flax_objects.py  dummy_ggml_objects.py  dummy_pt_objects.py  dummy_tf_objects.py  dummy_vllm_objects.py  import_utils.py  lazy.py
openllm-python/src/openllm_cli/: _factory.py  _sdk.py  entrypoint.py  termui.py
openllm-python/src/openllm_cli/extension/: build_base_container.py  dive_bentos.py  get_containerfile.py  get_prompt.py  list_bentos.py  list_models.py  playground.py
openllm-python/src/openllm_cli/playground/: falcon_tuned.py  features.py  llama2_qlora.py  opt_tuned.py
openllm-python/tests/: __init__.py  _data.py  compiled_test.py  configuration_test.py  conftest.py  models_test.py  package_test.py  regression_test.py  strategies_test.py
openllm-python/tests/_strategies/: _configuration.py
openllm-python/tests/models/: conftest.py  flan_t5_test.py  opt_test.py
openllm-python/typings/attr/: _make.pyi  _typing_compat.pyi
openllm-python/typings/nbformat/: _struct.pyi  notebooknode.pyi
openllm-python/typings/nbformat/v4/: convert.pyi  rwbase.pyi
openllm-python/typings/simple_di/: __init__.pyi  providers.pyi
(+1084 files in other folders)
