[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openllm-next"
version = "0.0.1"
description = "A description of your package."
authors = [{name = "oasiszero", email = "oasis0.com@gmail.com"}]
license = {file = "LICENSE"}
dependencies = [
    "bentoml",
    "typer",
    "questionary",
    "pyaml",
    "psutil",
    "pathlib",
    "pip_requirements_parser",
]

[tool.typer]
src-dir = "openllm_next"
